started on the home page and side nav bar

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,11 @@
         <script src="factories/adminFactory.js"></script>
         <script src="directives/loginDirective.js"></script>
         <script src="directives/manufacturerList.js"></script>
+        <script src="directives/sideNavBar.js"></script>
+        <script src="factories/sessionFactory.js"></script>
+        <script src="controllers/sideNavBarController.js"></script>
+        <script src="controllers/profileController.js"></script>
+        <script src="factories/profileFactory.js"></script>
         <script src="controllers/manufacturerListController.js"></script>
         <script src="factories/adminManufacturerFactory.js"></script>
         <script src="controllers/manufacturerController.js"></script>
