added bag model and started gearbox page

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,8 @@
         <script src="factories/profileFactory.js"></script>
         <script src="controllers/manufacturerListController.js"></script>
         <script src="factories/adminManufacturerFactory.js"></script>
+        <script src="controllers/gearboxController.js"></script>
+        <script src="factories/gearboxFactory.js"></script>
         <script src="controllers/manufacturerController.js"></script>
         <script src="controllers/camerasListController.js"></script>
         <script src="controllers/lensListController.js"></script>
