added amazon API lookup

--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,8 @@
         <script src="controllers/camerasListController.js"></script>
         <script src="controllers/lensListController.js"></script>
         <script src="controllers/accessoryController.js"></script>
+        <script src="controllers/amazonAPIController.js"></script>
+        <script src="factories/amazonAPIFactory.js"></script>
     </head>
     <body>
         <div ng-view>
