added ability to clear gearbox lenses and cameras.  Added pics to gearbox items added.

--- a/client/directives/sideNavBar.html
+++ b/client/directives/sideNavBar.html
@@ -4,7 +4,7 @@
             <a href="#/index">Home</a>
         </li>
         <li><a href="#/profile">Profile</a></li>
-        <li><a href="#/gearbox">{{gearbox}}</a></li>
+        <li><a href="#/gearbox">{{gearboxName}}</a></li>
         <li><a href="#/packs">Packs</a></li>
         <li><a href="#/badges">Badges</a></li>
         <li><a href="#/friends">Friends</a></li>
