added draggable droppable and double click flippable cards

--- a/client/directives/manufacturerList.html
+++ b/client/directives/manufacturerList.html
@@ -16,6 +16,7 @@
                 <td><a href="#/manufacturer/{{company.name}}">{{company.name}}</a></td>
                 <td><a href="#/camerasList/{{company.name}}">Cameras</a></td>
                 <td><a href="#/lensList/{{company.name}}">Lenses</a></td>
+                <td><a href="#/bagsList/{{company.name}}">Bags</a></td>
                 <td><a href="#/accessoryList/{{company.name}}">Accessories</a></td>
             </tr>
         </tbody>
