--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html ng-app='app'>
     <head>
@@ -17,6 +18,7 @@
         <script src="directives/loginDirective.js"></script>
         <script src="directives/manufacturerList.js"></script>
         <script src="directives/sideNavBar.js"></script>
+        <script src="directives/dragAndDrop.js"></script>
         <script src="factories/sessionFactory.js"></script>
         <script src="controllers/sideNavBarController.js"></script>
         <script src="controllers/profileController.js"></script>
