--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,8 @@
         <script src="controllers/accessoryController.js"></script>
         <script src="controllers/amazonAPIController.js"></script>
         <script src="factories/amazonAPIFactory.js"></script>
+        <script src="controllers/bagsListController.js"></script>
+        
     </head>
     <body>
         <div ng-view>
